# ExoBLAS

./: .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  TESTING.md  blk.sh  line_count.py  requirements.txt  run_level2_tests.sh  sgemm_params.out  sgemm_params2.out  sgemm_params3.out  sgemm_params4.out  sgemm_params5.out  sgemm_params6.out  sgemm_params7.out  shell.nix  tuning_compile_log.txt  window.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  blas_common_schedules.py  blas_composed_schedules.py  blaslib.py  cblas_enums.py  codegen_helpers.py  composed_schedules.py  exceptions.py  exo_blas_config.py.in  higher_order.py  inspection.py  introspection.py  memories.py  parameters.py  perf_features.py  rc_wrappers.py  serialize.py  stdlib.py
src/common/machines/: abstract_vector.py  avx2.py  avx512.py  machine.py  machine_params.py  neon.py  x86.py
src/gemmini/: CMakeLists.txt  exo_gemmini_matmul.py
src/level1/: CMakeLists.txt  asum.py  axpy.py  bcopy.py  dot.py  dsdot.py  exo_copy.py  iamax.py  nrm2.py  rot.py  rotm.py  sad.py  scal.py  sdsdot.py  swap.py
src/level2/: CMakeLists.txt  gbmv.py  gemv.py  ger.py  sbmv.py  symv.py  syr.py  syr2.py  tbmv.py  tbsv.py  tpmv.py  trmv.py  trsv.py
src/level2/test/: gbmv.c  gbmv.h
src/level3/: CMakeLists.txt  format_options.py  gemm.py  gemm_kernels.py  mscal.py  old_gemm.py  run_test.sh  symm.py  syr2k.py  syrk.py  trmm.py
src/level3/kernels/: gemm_kernels.py
src/level3/misc/: scratch.py  test_if.py
test/: CMakeLists.txt  graph.py
test/codegen/: check_diff.py  check_diff.sh  hash.py
test/common/: becnh_gen.h  bench_ranges.h  blue_algorithm.h  correctness_helpers.h  error.h  generate_buffer.h  misc.h
test/level1/: CMakeLists.txt  test_copy.cpp  test_dot.cpp
test/level1/asum/: bench.cpp  correctness.cpp  exo_asum_wrapper.h
test/level1/axpy/: bench.cpp  correctness.cpp  exo_axpy_wrapper.h
test/level1/copy/: bench.cpp  correctness.cpp  exo_copy_wrapper.h
test/level1/dasum/: bench.cpp  correctness.cpp  exo_dasum.h
test/level1/daxpy/: bench.cpp  correctness.cpp  exo_daxpy.h
test/level1/dcopy/: bench.cpp  correctness.cpp  exo_dcopy.h
test/level1/ddot/: bench.cpp  correctness.cpp  exo_ddot.h
test/level1/diamax/: bench.cpp  correctness.cpp  exo_idamax.h
test/level1/dnrm2/: bench.cpp  correctness.cpp  exo_dnrm2.h
test/level1/dot/: bench.cpp  correctness.cpp  exo_dot_wrapper.h
test/level1/drot/: bench.cpp  correctness.cpp  exo_drot.h
test/level1/drotm/: bench.cpp  correctness.cpp  exo_drotm.h
test/level1/dscal/: bench.cpp  correctness.cpp  exo_dscal.h
test/level1/dsdot/: bench.cpp  correctness.cpp  exo_dsdot_h.h
test/level1/dswap/: bench.cpp  correctness.cpp  exo_dswap.h
test/level1/nrm2/: correctness.cpp
test/level1/rot/: bench.cpp  correctness.cpp  exo_rot_wrapper.h
test/level1/rotm/: bench.cpp  correctness.cpp  exo_rotm_wrapper.h
test/level1/sasum/: bench.cpp  correctness.cpp  exo_sasum.h
test/level1/saxpy/: bench.cpp  correctness.cpp  exo_saxpy.h
test/level1/scal/: bench.cpp  correctness.cpp  exo_scal_wrapper.h
test/level1/scopy/: bench.cpp  correctness.cpp  exo_scopy.h  exo_scopy_wrapper.h
test/level1/sdot/: bench.cpp  correctness.cpp  exo_sdot.h
test/level1/sdsdot/: bench.cpp  correctness.cpp  exo_sdsdot.h  exo_sdsdot_h.h
test/level1/siamax/: bench.cpp  correctness.cpp  exo_isamax.h
test/level1/snrm2/: bench.cpp  correctness.cpp  exo_snrm2.h
test/level1/srot/: bench.cpp  correctness.cpp  exo_srot.h
test/level1/srotm/: bench.cpp  correctness.cpp  exo_srotm.h
test/level1/sscal/: bench.cpp  correctness.cpp  exo_sscal.h
test/level1/sswap/: bench.cpp  correctness.cpp  exo_sswap.h
test/level1/swap/: bench.cpp  correctness.cpp  exo_swap_wrapper.h
test/level2/: CMakeLists.txt  test_gemv.cpp
test/level2/dgbmv/: bench.cpp  correctness.cpp  exo_dgbmv.h
test/level2/dgemv/: bench.cpp  correctness.cpp  exo_dgemv.h
test/level2/dger/: bench.cpp  correctness.cpp  exo_dger.h
test/level2/dsbmv/: bench.cpp  correctness.cpp  exo_dsbmv.h
test/level2/dsymv/: bench.cpp  correctness.cpp  exo_dsymv.h
test/level2/dsyr/: bench.cpp  correctness.cpp  exo_dsyr.h
test/level2/dsyr2/: bench.cpp  correctness.cpp  exo_dsyr2.h
test/level2/dtbmv/: bench.cpp  correctness.cpp  exo_dtbmv.h
test/level2/dtbsv/: bench.cpp  correctness.cpp  exo_dtbsv.h
test/level2/dtpmv/: bench.cpp  correctness.cpp  exo_dtpmv.h
test/level2/dtrmv/: bench.cpp  correctness.cpp  exo_dtrmv.h
test/level2/dtrsv/: bench.cpp  correctness.cpp  exo_dtrsv.h
test/level2/gemv/: bench.cpp  correctness.cpp  exo_gemv_wrapper.h
test/level2/ger/: bench.cpp  correctness.cpp  exo_ger_wrapper.h
test/level2/sgbmv/: bench.cpp  correctness.cpp  exo_sgbmv.h
test/level2/sgemv/: bench.cpp  correctness.cpp  exo_sgemv.h
test/level2/sger/: bench.cpp  correctness.cpp  exo_sger.h
test/level2/ssbmv/: bench.cpp  correctness.cpp  exo_ssbmv.h
test/level2/ssymv/: bench.cpp  correctness.cpp  exo_ssymv.h
test/level2/ssyr/: bench.cpp  correctness.cpp  exo_ssyr.h
test/level2/ssyr2/: bench.cpp  correctness.cpp  exo_ssyr2.h
test/level2/stbmv/: bench.cpp  correctness.cpp  exo_stbmv.h
test/level2/stbsv/: bench.cpp  correctness.cpp  exo_stbsv.h
test/level2/stpmv/: bench.cpp  correctness.cpp  exo_stpmv.h
test/level2/strmv/: bench.cpp  correctness.cpp  exo_strmv.h
test/level2/strsv/: bench.cpp  correctness.cpp  exo_strsv.h
test/level2/symv/: bench.cpp  correctness.cpp  exo_symv_wrapper.h
test/level2/syr/: bench.cpp  correctness.cpp  exo_syr_wrapper.h
test/level2/syr2/: bench.cpp  correctness.cpp  exo_syr2_wrapper.h
test/level2/trmv/: bench.cpp  correctness.cpp  exo_trmv_wrapper.h
test/level2/trsv/: bench.cpp  correctness.cpp  exo_trsv_wrapper.h
test/level3/: CMakeLists.txt  test_gemm.cpp  test_syrk.cpp
test/level3/dgemm/: bench.cpp  correctness.cpp  exo_dgemm.h
test/level3/dsyrk/: bench.cpp  correctness.cpp  exo_dsyrk.h
test/level3/gemm/: bench.cpp  correctness.cpp  exo_gemm_wrapper.h
test/level3/sgemm/: bench.cpp  correctness.cpp  exo_sgemm.h
(+117 files in other folders)
